docs: add Copilot instructions and build guide for Expo app
Add detailed Copilot instructions describing app stack, designguidelines, database schema German grade scale file structure, and
code patterns to improve AI-assisted development.

Introduce a comprehensive BUILD_INSTRUCTIONS.md with updated EAS build
commands, configuration fixes, and troubleshooting tips to replace the
deprecated expo build process and streamline modern Expo app builds.

Add German localization texts Tailwind CSS base setup for consistent
styling and full German UI support.

--- a/app.json
+++ b/app.json
@@ -1,29 +1,41 @@
 {
   "expo": {
-    "name": "grade-tracker-mobile",
+    "name": "Grade Tracker",
     "slug": "grade-tracker-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#6366f1"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.gradetracker.mobile"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#6366f1"
       },
-      "edgeToEdgeEnabled": true
+      "package": "com.gradetracker.mobile"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-secure-store"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "c509c86f-986d-425c-aa9d-91a6d6924836"
+      }
     }
   }
 }
