--- a/package.json
+++ b/package.json
@@ -9,13 +9,44 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.3.14",
+    "@react-navigation/native": "^7.1.10",
+    "@react-navigation/native-stack": "^7.3.14",
+    "@react-navigation/stack": "^7.3.3",
+    "appwrite": "^18.1.1",
+    "crypto-js": "^4.2.0",
     "expo": "~53.0.10",
+    "expo-calendar": "^14.1.4",
+    "expo-device": "^7.1.4",
+    "expo-document-picker": "^13.1.5",
+    "expo-file-system": "^18.1.10",
+    "expo-linear-gradient": "^14.1.5",
+    "expo-notifications": "^0.31.3",
+    "expo-print": "^14.1.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.2.3",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "react-native-calendars": "^1.1312.1",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/react": "~19.0.10",
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
