--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
     "appwrite": "^18.1.1",
     "crypto-js": "^4.2.0",
-    "expo": "~53.0.10",
+    "expo": "53.0.11",
     "expo-calendar": "^14.1.4",
     "expo-device": "^7.1.4",
     "expo-document-picker": "^13.1.5",
@@ -36,9 +36,9 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
