chore: add cloud build script and fix Java build issues
Add a cloud-build.sh script to simplify building the app using EAS cloud
builds, avoiding local Java/Gradle setup problems. The script checks for EAS
CLI installation, authentication, and offers build options for preview,
production, or both.

Include a detailed FIX_JAVA_BUILD.md guide explaining the Java/Gradle build
issues and recommending EAS cloud builds as the primary solution. Provide
instructions for local Java setup on Windows, macOS, and Linux as alternatives.

Update eas.json to specify the latest build images, set a specific NDK
version for Android, and allocate appropriate resources to ensure reliable
and consistent builds across all profiles.

--- a/eas.json
+++ b/eas.json
@@ -6,24 +6,35 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "android": {
+        "image": "latest",
+        "ndk": "25.1.8937393"
+      },
       "ios": {
+        "image": "latest",
         "resourceClass": "m-medium"
       }
     },
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "image": "latest",
+        "ndk": "25.1.8937393"
       },
       "ios": {
+        "image": "latest",
         "resourceClass": "m-medium"
       }
     },
     "production": {
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "app-bundle",
+        "image": "latest",
+        "ndk": "25.1.8937393"
       },
       "ios": {
+        "image": "latest",
         "resourceClass": "m-medium"
       }
     }
