feat(build): add local Windows build script and improve cloud builds
Add a new local-build.bat script for Windows to streamline local Android
builds with environment checks for Java, Android SDK, Node.js, and dependencies.
This enables easier local development and testing.

Update cloud-build.sh to use --no-local flag for EAS builds, ensuring builds
run on EAS servers rather than locally. This improves build consistency and
avoids local environment issues.

Add FIX_ANDROID_SDK.md documentation explaining Android SDK build failures
and providing a stable build image configuration for EAS to fix SDK setup
problems and improve build reliability.

--- a/eas.json
+++ b/eas.json
@@ -7,11 +7,9 @@
       "developmentClient": true,
       "distribution": "internal",
       "android": {
-        "image": "latest",
-        "ndk": "25.1.8937393"
+        "gradleCommand": ":app:assembleDebug"
       },
       "ios": {
-        "image": "latest",
         "resourceClass": "m-medium"
       }
     },
@@ -19,22 +17,18 @@
       "distribution": "internal",
       "android": {
         "buildType": "apk",
-        "image": "latest",
-        "ndk": "25.1.8937393"
+        "gradleCommand": ":app:assembleRelease"
       },
       "ios": {
-        "image": "latest",
         "resourceClass": "m-medium"
       }
     },
     "production": {
       "android": {
         "buildType": "app-bundle",
-        "image": "latest",
-        "ndk": "25.1.8937393"
+        "gradleCommand": ":app:bundleRelease"
       },
       "ios": {
-        "image": "latest",
         "resourceClass": "m-medium"
       }
     }
